[package]
name = "png"
version = "0.15.0"
license = "MIT OR Apache-2.0"

description = "PNG decoding and encoding library in pure Rust"
categories = ["multimedia::images"]
authors = ["nwin <nwin@users.noreply.github.com>"]
repository = "https://github.com/image-rs/image-png.git"

edition = "2018"
exclude = [
    "tests/*",
]

[dependencies]
miniz_oxide = { version = "0.3", git = "https://github.com/Frommi/miniz_oxide/", rev = "2a5703a4de8557dcbac981a52ea7cb1e414a169b" }
deflate = { version = "0.7.12", optional = true }
bitflags = "1.0"
crc32fast = "1.2.0"

[dev-dependencies]
getopts = "0.2.14"
term = "0.6.1"
glob = "0.3"
rand = "0.7.0"

[dev-dependencies.glium]
version = "0.22"
features = ["glutin"]
default-features = false

[features]
png-encoding = ["deflate"]
default = ["png-encoding"]
unstable = []
benchmarks = []
